--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,11 @@
   text-align: center;
 }
 
+.content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 a, a:visited {
   color: white;
 }
@@ -50,3 +55,51 @@ a, a:visited {
 a:visited {
   color: white;
 }
+
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
+}
+
+.button {
+  margin-left: 4px;
+  margin-right: 4px;
+	box-shadow: 0px 0px 0px 2px #9fb4f2;
+	background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
+	background-color:#7892c2;
+	border-radius:10px;
+	border:1px solid #4e6096;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:19px;
+	padding:12px 37px;
+	text-decoration:none;
+  text-shadow:0px 1px 0px #283966;
+}
+.button:hover {
+	background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
+	background-color:#476e9e;
+}
+.button:active {
+  position:relative;
+  top:1px;
+}
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+
